<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tiptastic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fifteen_percent">15%</string>
    <string name="ten_percent">10%</string>
    <string name="twenty_percent">20%</string>
    <string name="tip_label">Tip:</string>
    <string name="default_tip">$0.00</string>
    <string name="bill_hint">0.00</string>
</resources>
